--- a/_includes/header/open_graph.html
+++ b/_includes/header/open_graph.html
@@ -4,5 +4,5 @@
 <meta property="og:url" content="https://idzan.eu/{{ page.permalink }}">
 <meta property="og:description" content="{{ page.description }}">
 <meta property="og:type" content="website">
-<meta property="og:image" content="/img/og-image.png">
+<meta property="og:image" content="/{{ page.image }}">
 <meta property="og:locale" content="en_US" />
