--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,5 @@
-<script src="js/consent-config.js"></script>
-<script src="js/consent.js"></script>
+<script src="/js/consent-config.js"></script>
+<script src="/js/consent.js"></script>
 <!-- Google Tag Manager -->
 <script type="opt-in" data-name="googleAnalytics" data-type="application/javascript">
     (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
@@ -8,5 +8,5 @@
     })(window,document,'script','dataLayer','GTM-P24BSDN');
 </script>
 <!-- End Google Tag Manager -->
-<script type="opt-in" data-name="darkModeSwitcher" data-src="js/manual-switch.js" data-type="application/javascript"></script>
-<script type="opt-in" data-name="darkModeSwitcher" data-src="js/favicon-dark-mode.js" data-type="application/javascript"></script>
+<script type="opt-in" data-name="darkModeSwitcher" data-src="/js/manual-switch.js" data-type="application/javascript"></script>
+<script type="opt-in" data-name="darkModeSwitcher" data-src="/js/favicon-dark-mode.js" data-type="application/javascript"></script>
