Added new feature & one more splitting
New feature: CSS Scrollbar in Light & Dark Mode, fully functional. Not working in Firefox because of webkit prefix (unfortienatly :( )
Fixes and splittings: accessibility code is splitted from others, it is for easier management of code

--- a/css/dark.css
+++ b/css/dark.css
@@ -33,6 +33,17 @@
   :root :focus {
     outline: solid 1px var(--light);
   }
+  html::-webkit-scrollbar {
+    width: 10px;
+    height: 20px;
+  }
+  html::-webkit-scrollbar-thumb {
+    background: var(--light);
+    border-radius: 25px;
+  }
+  html::-webkit-scrollbar-track {
+    background: var(--dark);
+  }
   ::-moz-selection {
     background: var(--background);
     color: var(--text-color);
