--- a/scss/master.scss
+++ b/scss/master.scss
@@ -2,5 +2,6 @@
 @import 'grid';
 @import 'light';
 @import 'dark';
+@import 'includes/accessibility';
 @import 'includes/user-dark-switch';
 @import 'consent';
