--- a/css/light.css
+++ b/css/light.css
@@ -32,6 +32,20 @@
   outline: solid 1px var(--dark);
 }
 
+html::-webkit-scrollbar {
+  width: 10px;
+  height: 20px;
+}
+
+html::-webkit-scrollbar-thumb {
+  background: var(--dark);
+  border-radius: 25px;
+}
+
+html::-webkit-scrollbar-track {
+  background: var(--light);
+}
+
 ::-moz-selection {
   background: var(--background);
   color: var(--text-color);
