--- a/scss/dark.scss
+++ b/scss/dark.scss
@@ -44,6 +44,23 @@
         }
     }
 
+    html {
+        &::-webkit-scrollbar {
+            width: 10px;
+            height: 20px;
+        }
+    
+        &::-webkit-scrollbar-thumb {
+            background: var(--light);
+            border-radius: 25px;
+        }
+    
+        &::-webkit-scrollbar-track {
+            background: var(--dark);
+        }
+    
+    }
+
     ::selection {
         background: var(--background);
         color: var(--text-color);
