--- a/scss/light.scss
+++ b/scss/light.scss
@@ -39,6 +39,23 @@
     }
 }
 
+html {
+    &::-webkit-scrollbar {
+        width: 10px;
+        height: 20px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: var(--dark);
+        border-radius: 25px;
+    }
+
+    &::-webkit-scrollbar-track {
+        background: var(--light);
+    }
+
+}
+
 ::selection {
     background: var(--background);
     color: var(--text-color);
