--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,5 @@
 <script src="/js/consent-config.js"></script>
-    <!-- <script src="/js/consentChange.js"></script> -->
+    <script src="/js/consentChange.js"></script>
     <script src="/js/consent.js"></script>
     <!-- Google Tag Manager -->
     <script type="opt-in" data-name="googleAnalytics" data-type="application/javascript">
