--- a/scss/globals.scss
+++ b/scss/globals.scss
@@ -19,8 +19,8 @@
     --color-green: #{$green};
     --color-red: #{$red};
 
-    --color-dark-alpha: #{$dark-alpha};
-    --color-light-alpha: #{$light-alpha};
+    --color-dark-alpha: rgb(32 39 49 / 10%);
+    --color-light-alpha: rgb(238 238 238 / 90%);
 
     --facebook-light: #{$facebook};
     --twitter-light: #{$twitter};
