--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
         <div class="legal">
             <a href="/privacy.html">Privacy Policy</a>
             <a href="/terms.html">Terms of Service</a>
-            <a id="cookieChange" nonce="Y2hhbmdlQ29va2llQ29uc2VudA==">Change Cookie Settings</a>
+            <a role="link" id="cookieChange" nonce="Y2hhbmdlQ29va2llQ29uc2VudA==">Change Cookie Settings</a>
             <!-- <a onclick="return klaro.show();" id="cookieChange" nonce="Y2hhbmdlQ29va2llQ29uc2VudA==">Change Cookie Settings</a> -->
         </div>
         <div class="social">
