bit more of accessibility tweaks and fixes
you know, just to hjave it heh

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 <div class="navigation">
-        <input type="checkbox" id="nav-switch" name="nav-switch" class="menu-checkbox">
+        <input type="checkbox" id="nav-switch" name="nav-switch" class="menu-checkbox" aria-label="Menu" >
         <label for="nav-switch" class="menu">
             <span class="visually-hidden" aria-hidden="true">Menu</span>
             <span></span>
