--- a/css/master.css
+++ b/css/master.css
@@ -835,7 +835,6 @@ button {
 .user-toggle {
   margin: 1em auto 0 auto;
   padding-top: 1em;
-  max-width: 10em;
   text-align: center;
 }
 
@@ -846,7 +845,7 @@ button {
   background: var(--button-background);
   color: var(--button-color);
   border: none;
-  padding: 0.5em 1em;
+  padding: 1em;
   -webkit-transition: background 500ms ease-in-out, color 200ms ease;
   transition: background 500ms ease-in-out, color 200ms ease;
 }
