--- a/css/globals.css
+++ b/css/globals.css
@@ -81,6 +81,8 @@ body {
   line-height: 1.5em;
   -webkit-transition: background 500ms ease-in-out, color 200ms ease;
   transition: background 500ms ease-in-out, color 200ms ease;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 h1 {
